Erweiterung weider entfernt

--- a/src/storyblok/PopularArticles.astro
+++ b/src/storyblok/PopularArticles.astro
@@ -8,7 +8,7 @@ let articles = blok.articles
  
 <section class="mx-6 my-12" {...storyblokEditable(blok)}>
   <h2 class="text-6xl text-[#50b0ae] font-bold text-center mb-12">
-    {blok.headline}2
+    {blok.headline}
   </h2>
   <ul class="grid grid-cols-1 gap-6 md:grid-cols-3">
     {
