--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -5,6 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
 import parseUrl from '../utils/parseUrl'
 import isPreview from '../utils/isPreview'
 import generateStaticPaths from '../utils/generateStaticPaths'
+export const prerender = true;
 
 export async function getStaticPaths() {
  //We have moved all the code to a generateStaticPaths() function.
